[gd_scene load_steps=9 format=3 uid="uid://bui3t2i05wq6a"]

[ext_resource type="Script" uid="uid://48sivr3f365b" path="res://scenes/Players/first-person.gd" id="1_jtjbq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e4tum"]
height = 1.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sabve"]
height = 1.2

[sub_resource type="Animation" id="Animation_2cys0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ip0y8"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0698132, 0, 0.00872665), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.08, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ybh4h"]
resource_name = "land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0698132, 0, 0.00872665), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.08, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3x3gt"]
resource_name = "landHeavy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.378929, 1.18921, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.207694, 0, 0.00523599), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.378929, 1.18921, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.192, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b4dju"]
_data = {
&"RESET": SubResource("Animation_2cys0"),
&"jump": SubResource("Animation_ip0y8"),
&"land": SubResource("Animation_ybh4h"),
&"landHeavy": SubResource("Animation_3x3gt")
}

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_jtjbq")

[node name="standCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
shape = SubResource("CapsuleShape3D_e4tum")

[node name="crouchCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_sabve")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.9, 0)

[node name="RayCast3DWall" type="RayCast3D" parent="."]
transform = Transform3D(0.98221, 0, 0, 0, -4.29338e-08, 0.98221, 0, -0.98221, -4.29338e-08, -0.000863552, 1.00584, -0.0059948)
target_position = Vector3(0, 2, 0)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="Camera3D" type="Camera3D" parent="neck/head"]
fov = 80.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/head"]
libraries = {
&"": SubResource("AnimationLibrary_b4dju")
}
